# python-chzzk

./: .gitignore  LICENSE  README.md  requirements.txt  run.py  setup.cfg
chzzk/: __init__.py  chzzk.py  client.py  errors.py  models.py  utils.py
chzzk/models/: __init__.py  raw.py
python_chzzk/: __init__.py  chzzk.py  client.py  models.py  utils.py
