[metadata]
name = python-chzzk
version = attr: chzzk.__version__
description = An unofficial Python library for CHZZK
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/python-chzzk
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    chzzk
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    httpx
    pydantic
    typing-extensions
python_requires = >=3.8
packages = find: